# thatlib

./: .gitignore  CMakeLists.txt
include/that/IO/: File.hpp  FileSystem.hpp  MountingPoints.hpp
include/that/core/: BasicTypes.hpp  Concepts.hpp  Core.hpp  Paths.hpp  Result.hpp  Strings.hpp
include/that/img/: Color.hpp  Format.hpp  FormatConversion.hpp  ImRead.hpp  ImWrite.hpp  Image.hpp  ImageIO.hpp
include/that/math/: Half.hpp  Vector.hpp
include/that/stl_ext/: alignment.hpp  array.hpp  meta_utility.hpp  pointer.hpp  visitor.hpp
include/that/utils/: EnumClassOperators.hpp  ExtensibleDataStorage.hpp  ExtensibleStorage.hpp  ExtensibleStringContainer.hpp  ExtensibleStringStorage.hpp  PointerDynamicVariant.hpp  StringContainer.hpp  StringMap.hpp  StringSet.hpp
src/core/: BasicTypes.hpp  Concepts.hpp  Core.hpp  Range.hpp  Result.cpp  Strings.hpp
src/img/: Color.h  Color.hpp  Format.cpp  Format.hpp  FormatConversion.hpp  ImRead.cpp  ImRead.h  ImRead.hpp  ImWrite.cpp  ImWrite.h  ImWrite.hpp  Image.cpp  Image.h  Image.hpp  ImageIO.cpp  ImageIO.h  ImageIO.hpp  stb_image.cpp
src/math/: Half.hpp  Vector.h  Vector.hpp
src/stl_ext/: alignment.hpp  const_forward.hpp
src/that/IO/: File.cpp  FileSystem.cpp  MountingPoints.cpp
src/that/core/: Result.cpp  Tests.cpp
src/that/img/: Format.cpp  ImRead.cpp  ImWrite.cpp  Image.cpp  ImageIO.cpp
src/that/stl_ext/: visitor.cpp
src/that/utils/: ExtensibleDataStorage.cpp  PointerDynamicVariant.cpp
src/utils/: ExtensibleDataStorage.cpp  ExtensibleDataStorage.hpp  ExtensibleStorage.hpp  ExtensibleStringContainer.hpp  ExtensibleStringStorage.hpp
